# WinInspect

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SESSION.md  SESSION_HANDOFF_2026-06-29.md  STATUS-2026-02-12.md  STRATEGY.md  internal_out.txt
.githooks/: pre-push
.github/workflows/: ci.yml  formal.yml  release.yml
bld/: .gitignore  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
bld/Testing/Temporary/: CTestCostData.txt
clients/cli/src/: cli.cpp
clients/gui/src/: gui_main.cpp  gui_stub.cpp
clients/gui/tests/: test_viewmodel.cpp
clients/gui/viewmodel/: viewmodel.cpp  viewmodel.hpp
clients/portable/: go.mod  main.go
core/include/wininspect/: backend.hpp  base64.hpp  cert.hpp  cidr.hpp  core.hpp  crypto.hpp  fake_backend.hpp  logger.hpp  mdns.hpp  network_config.hpp  tinyjson.hpp  types.hpp  update.hpp  util_win32.hpp  win32_backend.hpp
core/src/: cert.cpp  cidr.cpp  core.cpp  crypto.cpp  crypto_windows.cpp  fake_backend.cpp  logger.cpp  mdns.cpp  network_config.cpp  update.cpp  win32_backend.cpp
core/tests/: main.cpp  test_contract_methods.cpp  test_core_idempotence.cpp  test_crypto.cpp  test_fuzz.cpp  test_injection.cpp  test_properties.cpp  test_trace_replay.cpp  test_uia.cpp
daemon/include/: control_manager.hpp  http_server.hpp  network_config.hpp  rendezvous_client.hpp
daemon/src/: control_manager.cpp  http_server.cpp  main.cpp  network_config.cpp  pipe.hpp  pipe_win32.cpp  rendezvous_client.cpp  rendezvous_http.cpp  rendezvous_server.cpp  request_handler.hpp  server.cpp  server_state.hpp  tcp_server.cpp  tcp_server.hpp  test_discovery.cpp  tray.cpp  tray.hpp
daemon/webui/: index.html
deploy/portableapps/: README.md
deploy/portableapps/App/AppInfo/: appinfo.ini  launcher.ini
docs/: ARCHITECTURE.md  BRINGUP_STRATEGY.md  CONTRACTS.md  DEPENDENCIES.md  FORMAL_METHODS.md  FORMAL_METHODS_ASSESSMENT.md  MODEL_SYNC.md  MULTI_INSTANCE_LAN.md  POLICIES.md  PROTOCOL.md  SUBMODULE_POLICY.md  UIA_DISCOVERY.md  VERSIONING.md  dependency-graph.mmd
formal/tla/: README.md  WinInspect_Handshake.tla  WinInspect_v1.cfg  WinInspect_v1.tla  WinInspect_v2.cfg  WinInspect_v2.tla  WinInspect_v2_fast.cfg  handshake_tlc.cfg  v2_tlc.cfg
formal/traces/: event_subscription.json  system_orchestration.json  two_clients_non_interference.json  uia_recursive_tree.json
prompts/: agent_prompt_wbab.md
protocol/: schema_v1.json
scripts/: bootstrap-wbab-submodule.sh  build-portableapps.sh  discover.sh  lint.sh  preflight.sh  smoke.sh  update_tla_model.py  verify-versions.sh  wbab-test.sh  wi-tunnel.py
scripts/docker/: pull-first.sh
scripts/submodules/: converge-to-upstream.sh  enforce-policy.sh  export-issue-package.sh
tests/: fuzz_tcp.py  smoke_test.bat
tests/contract/: README.md
tools/: build_uia_check.sh  check_uia.cpp  ci-build.sh  package-nsis.sh  sign-dev.sh  wbab  winbuild-build.sh  wininspect.nsi
tools/WineBotAppBuilder/: .keep
tools/survey-uia/: CMakeLists.txt  survey_uia.cpp
tools/wine-uia-extension/: CMakeLists.txt  extension.cpp
